_build/html/reports/191-Charts.err.log
Traceback (most recent call last):
  File "/Users/pingel/Library/Python/3.7/lib/python/site-packages/jupyter_cache/executors/utils.py", line 64, in single_nb_execution
    **kwargs,
  File "/Users/pingel/Library/Python/3.7/lib/python/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/pingel/Library/Python/3.7/lib/python/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/pingel/Library/Python/3.7/lib/python/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.7/lib/python3.7/asyncio/base_events.py", line 584, in run_until_complete
    return future.result()
  File "/Users/pingel/Library/Python/3.7/lib/python/site-packages/nbclient/client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/pingel/Library/Python/3.7/lib/python/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/pingel/Library/Python/3.7/lib/python/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
pip3 install plotly pandas altair bokeh --user
------------------

[0;36m  File [0;32m"/var/folders/8h/kc9vjv_j03q3_ndk2c42s1mr0000gn/T/ipykernel_90810/643070724.py"[0;36m, line [0;32m1[0m
[0;31m    pip3 install plotly pandas altair bokeh --user[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (643070724.py, line 1)

